Minor build improvements
git-svn-id: svn://svn.hafro.is/jminor/trunk@17481 51816742-9f83-410d-85ed-e7bcf7042953