@@ -99,7 +99,6 @@ task runServer(type: JavaExec, dependsOn: createServerKeystore) {
     group = 'run'
     classpath = configurations.serverRuntime
     main = 'org.jminor.framework.server.DefaultEntityConnectionServer'
-//    jvmArgs '--add-modules', 'java.xml.bind'
     systemProperties = [
             'jminor.db.type'                            : 'h2',
             'jminor.db.host'                            : 'h2db',
